--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:title" content="Distribuidora de productos de limpieza en CABA | Barretodo">
 <meta property="og:description" content="Mayorista y minorista. Empresas, consorcios y hogares. Envíos 24–48 hs.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="assets/img/hero.jpg">
+<meta property="og:image" content="assets/img/hero.webp">
 <link rel="stylesheet" href="assets/css/styles.css">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "Barretodo",
-  "image": "https://barretodo.com.ar/assets/img/hero.jpg",
+  "image": "https://barretodo.com.ar/assets/img/hero.webp",
   "url": "https://barretodo.com.ar/",
   "telephone": "+54 11 5102-2954",
   "address": {
@@ -66,7 +66,7 @@
 
 <main class="page">
   <section class="hero">
-    <img src="assets/img/hero.jpg" alt="Distribuidora de productos de limpieza mayorista en CABA - Barretodo" class="hero-img" loading="eager">
+    <img src="assets/img/hero.webp" alt="Distribuidora de productos de limpieza mayorista en CABA - Barretodo" class="hero-img" loading="eager">
     <div class="hero-content container">
       <h1>Distribuidora mayorista de productos de limpieza en CABA</h1>
       <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
@@ -121,32 +121,32 @@
     <h2 class="section-title">CONTAMOS CON MÁS DE 250 PRODUCTOS DE LIMPIEZA E HIGIENE</h2>
     <div class="grid">
       <article class="card">
-        <img src="assets/img/concentrados.jpg" alt="Concentrados" class="card-img" loading="lazy">
+        <img src="assets/img/concentrados.webp" alt="Concentrados" class="card-img" loading="lazy">
         <h3>Concentrados</h3>
         <button class="btn btn-outline" data-modal="concentrados">Ver más</button>
       </article>
       <article class="card">
-        <img src="assets/img/descartables.jpg" alt="Descartables" class="card-img" loading="lazy">
+        <img src="assets/img/descartables.webp" alt="Descartables" class="card-img" loading="lazy">
         <h3>Descartables</h3>
         <button class="btn btn-outline" data-modal="descartables">Ver más</button>
       </article>
       <article class="card">
-        <img src="assets/img/dispenser.jpg" alt="Dispenser" class="card-img" loading="lazy">
+        <img src="assets/img/dispenser.webp" alt="Dispenser" class="card-img" loading="lazy">
         <h3>Dispenser</h3>
         <button class="btn btn-outline" data-modal="dispenser">Ver más</button>
       </article>
       <article class="card">
-        <img src="assets/img/herramientas.jpg" alt="Herramientas" class="card-img" loading="lazy">
+        <img src="assets/img/herramientas.webp" alt="Herramientas" class="card-img" loading="lazy">
         <h3>Herramientas</h3>
         <button class="btn btn-outline" data-modal="herramientas">Ver más</button>
       </article>
       <article class="card">
-        <img src="assets/img/aromatizacion.jpg" alt="Aromatización" class="card-img" loading="lazy">
+        <img src="assets/img/aromatizacion.webp" alt="Aromatización" class="card-img" loading="lazy">
         <h3>Aromatización</h3>
         <button class="btn btn-outline" data-modal="aromatizacion">Ver más</button>
       </article>
       <article class="card">
-        <img src="assets/img/insecticidas.jpg" alt="Insecticidas" class="card-img" loading="lazy">
+        <img src="assets/img/insecticidas.webp" alt="Insecticidas" class="card-img" loading="lazy">
         <h3>Insecticidas</h3>
         <button class="btn btn-outline" data-modal="insecticidas">Ver más</button>
       </article>
@@ -161,7 +161,7 @@
     <div class="grid process-grid">
       <article class="card process-card">
         <figure class="process-media">
-          <img src="assets/img/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
+          <img src="assets/img/local.webp" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
         </figure>
         <h3>Te esperamos en el local</h3>
         <p>Atención cercana y retiro en el momento. También tomamos pedidos por WhatsApp.</p>
@@ -169,7 +169,7 @@
 
       <article class="card process-card">
         <figure class="process-media">
-          <img src="assets/img/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
+          <img src="assets/img/produccion.webp" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
         </figure>
         <h3>Preparamos tu pedido</h3>
         <p>Seleccionamos y armamos productos propios y de marcas para que rindan al máximo.</p>
@@ -177,7 +177,7 @@
 
       <article class="card process-card">
         <figure class="process-media">
-          <img src="assets/img/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
+          <img src="assets/img/envio.webp" alt="Reparto y entregas rápidas en CABA" loading="lazy">
         </figure>
         <h3>Entregamos a tiempo</h3>
         <p>Coordinamos entregas en 24–48 h en CABA, o retiro cuando prefieras.</p>
