--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,14 +10,14 @@
 <meta property="og:title" content="Productos | Barretodo">
 <meta property="og:description" content="Rubros de productos de limpieza: concentrados, descartables, dispenser, herramientas, aromatización e insecticidas.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="../assets/img/hero.jpg">
+<meta property="og:image" content="../assets/img/hero.webp">
 <link rel="stylesheet" href="../assets/css/styles.css">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "Barretodo",
-  "image": "https://barretodo.com.ar/assets/img/hero.jpg",
+  "image": "https://barretodo.com.ar/assets/img/hero.webp",
   "url": "https://barretodo.com.ar/",
   "telephone": "+54 11 5102-2954",
   "address": {
@@ -66,12 +66,12 @@
 <section class="rubros container">
   <h2>CONTAMOS CON MÁS DE 250 PRODUCTOS DE LIMPIEZA E HIGIENE</h2>
   <div class="grid">
-    <article class="card"><img src="../assets/img/concentrados.jpg" alt="Concentrados" class="card-img" loading="lazy"><h3>Concentrados</h3><button class="btn btn-outline" data-modal="concentrados">Ver más</button></article>
-    <article class="card"><img src="../assets/img/descartables.jpg" alt="Descartables" class="card-img" loading="lazy"><h3>Descartables</h3><button class="btn btn-outline" data-modal="descartables">Ver más</button></article>
-    <article class="card"><img src="../assets/img/dispenser.jpg" alt="Dispenser" class="card-img" loading="lazy"><h3>Dispenser</h3><button class="btn btn-outline" data-modal="dispenser">Ver más</button></article>
-    <article class="card"><img src="../assets/img/herramientas.jpg" alt="Herramientas" class="card-img" loading="lazy"><h3>Herramientas</h3><button class="btn btn-outline" data-modal="herramientas">Ver más</button></article>
-    <article class="card"><img src="../assets/img/aromatizacion.jpg" alt="Aromatización" class="card-img" loading="lazy"><h3>Aromatización</h3><button class="btn btn-outline" data-modal="aromatizacion">Ver más</button></article>
-    <article class="card"><img src="../assets/img/insecticidas.jpg" alt="Insecticidas" class="card-img" loading="lazy"><h3>Insecticidas</h3><button class="btn btn-outline" data-modal="insecticidas">Ver más</button></article>
+    <article class="card"><img src="../assets/img/concentrados.webp" alt="Concentrados" class="card-img" loading="lazy"><h3>Concentrados</h3><button class="btn btn-outline" data-modal="concentrados">Ver más</button></article>
+    <article class="card"><img src="../assets/img/descartables.webp" alt="Descartables" class="card-img" loading="lazy"><h3>Descartables</h3><button class="btn btn-outline" data-modal="descartables">Ver más</button></article>
+    <article class="card"><img src="../assets/img/dispenser.webp" alt="Dispenser" class="card-img" loading="lazy"><h3>Dispenser</h3><button class="btn btn-outline" data-modal="dispenser">Ver más</button></article>
+    <article class="card"><img src="../assets/img/herramientas.webp" alt="Herramientas" class="card-img" loading="lazy"><h3>Herramientas</h3><button class="btn btn-outline" data-modal="herramientas">Ver más</button></article>
+    <article class="card"><img src="../assets/img/aromatizacion.webp" alt="Aromatización" class="card-img" loading="lazy"><h3>Aromatización</h3><button class="btn btn-outline" data-modal="aromatizacion">Ver más</button></article>
+    <article class="card"><img src="../assets/img/insecticidas.webp" alt="Insecticidas" class="card-img" loading="lazy"><h3>Insecticidas</h3><button class="btn btn-outline" data-modal="insecticidas">Ver más</button></article>
   </div>
 
      <!-- Cierre CTA -->
