--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -10,14 +10,14 @@
 <meta property="og:title" content="Cómo comprar | Barretodo">
 <meta property="og:description" content="Pasos para pedir tu presupuesto y coordinar entrega en CABA.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="../assets/img/hero.jpg">
+<meta property="og:image" content="../assets/img/hero.webp">
 <link rel="stylesheet" href="../assets/css/styles.css">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "Barretodo",
-  "image": "https://barretodo.com.ar/assets/img/hero.jpg",
+  "image": "https://barretodo.com.ar/assets/img/hero.webp",
   "url": "https://barretodo.com.ar/",
   "telephone": "+54 11 5102-2954",
   "address": {
