--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -10,14 +10,14 @@
 <meta property="og:title" content="Quiénes somos | Barretodo">
 <meta property="og:description" content="Conocé Barretodo: calidad, servicio y rapidez en productos de limpieza.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="../assets/img/hero.jpg">
+<meta property="og:image" content="../assets/img/hero.webp">
 <link rel="stylesheet" href="../assets/css/styles.css">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "Barretodo",
-  "image": "https://barretodo.com.ar/assets/img/hero.jpg",
+  "image": "https://barretodo.com.ar/assets/img/hero.webp",
   "url": "https://barretodo.com.ar/",
   "telephone": "+54 11 5102-2954",
   "address": {
@@ -111,7 +111,7 @@
     <div class="grid process-grid">
       <article class="card process-card">
         <figure class="process-media">
-          <img src="../assets/img/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
+          <img src="../assets/img/local.webp" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
         </figure>
         <h3>Te esperamos en el local</h3>
         <p>Atención cercana y retiro en el momento. También tomamos pedidos por WhatsApp.</p>
@@ -119,7 +119,7 @@
 
       <article class="card process-card">
         <figure class="process-media">
-          <img src="../assets/img/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
+          <img src="../assets/img/produccion.webp" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
         </figure>
         <h3>Preparamos tu pedido</h3>
         <p>Seleccionamos y armamos productos propios y de marcas para que rindan al máximo.</p>
@@ -127,7 +127,7 @@
 
       <article class="card process-card">
         <figure class="process-media">
-          <img src="../assets/img/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
+          <img src="../assets/img/envio.webp" alt="Reparto y entregas rápidas en CABA" loading="lazy">
         </figure>
         <h3>Entregamos a tiempo</h3>
         <p>Coordinamos entregas en 24–48 h en CABA, o retiro cuando prefieras.</p>
