--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <button class='modal-close' data-close='concentrados' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-concentrados'>Concentrados</h3>
       <p>Desengrasantes, detergentes industriales, desinfectantes, multiuso. Presentaciones 1L / 5L / 20L.</p>
-      <ul class='modal-list'><li>Desengrasante industrial</li><li>Detergente concentrado</li><li>Desinfectante</li><li>Multiuso</li></ul>
+      <ul class='modal-list'><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina</li><li>Cloro</li><li>Jabon para ropa</li><li>Suavizante para ropa</li><li>Quita manchas</li><li>Bicarbonato de sodio</li><li>Percarbonato de sodio</li><li>Limpia tapizados</li><li>Destapa cañerias</li><li>Alcohol 70°/96° cereal / tridestilado</li><li>Vinagre de limpieza</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
