--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
     <div class='modal-content'>
       <button class='modal-close' data-close='concentrados' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-concentrados'>Concentrados</h3>
-      <p>Desengrasantes, detergentes industriales, desinfectantes, multiuso. Presentaciones 1L / 5L / 20L.</p>
-      <ul class='modal-list'><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina (tambien en gel) y Cloro</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina</li><li>Jabon y Suavizante para ropa</li><li>Bicarbonato y Percarbonato de sodio</li>><li>Alcohol 70°/96° cereal / tridestilado</li><li>Vinagre de limpieza</li></ul>
+      <p>Desengrasantes, detergentes, desinfectantes, limpiadores multiuso. Presentaciones 1L / 5L .</p>
+      <ul class='modal-list'><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina (tambien en gel) y Cloro</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina pura</li><li>Jabon y Suavizante para ropa</li><li>Bicarbonato y Percarbonato de sodio</li><li>Alcohol 70°/96° cereal / tridestilado / gel</li><li>Vinagre de limpieza</li><li>Limpia tapizados / Destapa cañerias</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
