--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div class='modal-content'>
       <button class='modal-close' data-close='descartables' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-descartables'>Descartables</h3>
-      <p>Bolsón papel higiénico 30 rollos (distintos metrajes), servilletas, bolsas, guantes.</p>
+      <p>Bolsón papel higiénico 30 rollos (distintos metrajes), caja toallas intercaladas, bolsas distintos tipos, tamaños y colores, guantes.</p>
       <ul class='modal-list'><li>Bolsón papel higiénico 30 rollos</li><li>Bolson papel cocina</li><li>Papel higienico jumbo x8 (200m y 300m) (Insitucional)</li><li>Guantes latex / nitrilo</li><li>Bolsa de residuo negra/verde/transparente</li><li>Bolsa de escombro negra/transparente</li><li>Papel toallas intercaladas blancas / beage</li><li>Barbijos</li><li>Bolsa de arranque</li><li>Bolsa camiseta</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
