--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
     <div class='modal-content'>
       <button class='modal-close' data-close='dispenser' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-dispenser'>Dispenser</h3>
-      <p>Equipos y recargas para jabón líquido, papel toalla, papel higiénico institucional, alcohol en gel.</p>
-      <ul class='modal-list'><li>Dispensers de jabón</li><li>Papel toalla</li><li>Papel higiénico institucional</li><li>Alcohol en gel</li></ul>
+      <p>Equipos para jabón líquido, papel toalla intercaladas, papel higiénico institucional, alcohol en gel.</p>
+      <ul class='modal-list'><li>Dispensers de jabón</li><li>Dispenser papel toalla intercaladas</li><li>Dispenser para Papel higiénico jumbo institucional</li><li>Dispenser para alcohol en gel</li><li>Dispenser para papel bobina</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
