--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <button class='modal-close' data-close='dispenser' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-dispenser'>Dispenser</h3>
       <p>Equipos para jabón líquido, papel toalla intercaladas, papel higiénico institucional, alcohol en gel.</p>
-      <ul class='modal-list'><li>Dispensers de jabón</li><li>Dispenser papel toalla intercaladas</li><li>Dispenser para Papel higiénico jumbo institucional</li><li>Dispenser para alcohol en gel</li><li>Dispenser para papel bobina</li></ul>
+      <ul class='modal-list'><li>Dispensers de jabón y alcohol en gel</li><li>Dispenser papel toalla intercaladas</li><li>Dispenser para Papel higiénico jumbo institucional</li><li>Dispenser para papel bobina</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -316,8 +316,8 @@
     <div class='modal-content'>
       <button class='modal-close' data-close='herramientas' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-herramientas'>Herramientas</h3>
-      <p>Palas, escobas, fibras, trapos, baldes, mopas, carritos (hogar y profesional).</p>
-      <ul class='modal-list'><li>Escobas y palas</li><li>Fibras y trapos</li><li>Baldes y mopas</li><li>Carritos</li></ul>
+      <p>Palas, escobas, trapos, baldes, mopas, tachos de basura (hogar y profesional).</p>
+      <ul class='modal-list'><li>Esponjas lava platos, acero, lana acero</li><li>Escobas, escobillones y plumeros</li><li>Palas de mano y con palo</li><li>Trapos de piso, rejillas, repasadores, microfibras</li><li>Secadores, lampazos y mopas</li><li>Tachos de basura y baldes</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
