--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
     <div class='modal-content'>
       <button class='modal-close' data-close='aromatizacion' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-aromatizacion'>Aromatización</h3>
-      <p>Difusores, fragancias concentradas y ambientales.</p>
-      <ul class='modal-list'><li>Difusores</li><li>Fragancias concentradas</li><li>Ambientales</li></ul>
+      <p>Difusores, perfuminas, fragancias concentradas y ambientales. 1L / 5L.</p>
+      <ul class='modal-list'><li>Perfumina textil y de ambiente (varios aromas)</li><li>Aromatizadores de ambiente en aerosol</li><li>Difusores de ambiente</li><li>Equipos de aromatizacion</li><li>Sahumerios y aceites para horniltos</li><li>Aromatizacion de autos</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -344,8 +344,8 @@
     <div class='modal-content'>
       <button class='modal-close' data-close='insecticidas' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-insecticidas'>Insecticidas</h3>
-      <p>Aerosoles, líquidos y cebos de marcas líderes.</p>
-      <ul class='modal-list'><li>Aerosoles</li><li>Líquidos</li><li>Cebos</li></ul>
+      <p>Derribantes y repelentes en aerosol y liquidos para control de plagas.</p>
+      <ul class='modal-list'><li>Repelentes aerosol, crema y liquidos</li><li>Repelntes naturales (aceite citronella)</li><li>Derribantes liquidos (control de plagas)</li><li>Derribantes aerosol</li></ul>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
