--- a/pages/faq.html
+++ b/pages/faq.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="es-AR">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Preguntas frecuentes | Barretodo</title>
-<meta name="description" content="Respuestas sobre zonas, pagos, tiempos, ventas mayoristas y asesoramiento.">
-<link rel="icon" type="image/png" href="../favicon.png" />
-<link rel="canonical" href="https:/barretodo.com.ar/pages/faq.html">
-<meta property="og:title" content="Preguntas frecuentes | Barretodo">
-<meta property="og:description" content="Respuestas sobre zonas, pagos, tiempos, ventas mayoristas y asesoramiento.">
-<meta property="og:type" content="website">
-<meta property="og:image" content="../assets/img/hero.webp">
-<link rel="stylesheet" href="../assets/css/styles.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Preguntas frecuentes | Barretodo (Limpieza en CABA)</title>
+<meta content="Respuestas sobre zonas, pagos, tiempos, ventas mayoristas y asesoramiento." name="description"/>
+<link href="../favicon.png" rel="icon" type="image/png"/>
+
+
+
+
+
+<link href="../assets/css/styles.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -32,157 +33,136 @@
   "priceRange": "$$"
 }
 </script>
-</head>
+<link href="https://barretodo.com.ar/pages/faq.html" rel="canonical"/><meta content="Preguntas frecuentes | Barretodo (Limpieza en CABA)" property="og:title"/><meta content="Respuestas sobre zonas, pagos, tiempos, ventas mayoristas y asesoramiento." property="og:description"/><meta content="website" property="og:type"/><meta content="summary_large_image" name="twitter:card"/><meta content="https://barretodo.com.ar/assets/img/logo.png" property="og:image"/></head>
 <body>
 <div id="top"></div>
-
-<div class="promo-ticker" aria-label="Promociones">
-  <div class="marquee">
+<div aria-label="Promociones" class="promo-ticker">
+<div class="marquee">
     📢 ¡Promoción especial! Envíos 24–48 h en CABA · Descuentos por volumen · Atención inmediata por WhatsApp
   </div>
 </div>
-
 <header class="site-header">
-  <div class="container">
-    <a href="../index.html" class="brand">
-      <img src="../assets/img/logo.png" alt="Barretodo logo" class="logo">
-      <span class="brand-name">BARRETODO</span>
-    </a>
-    <nav class="site-nav" aria-label="Principal">
-      <button class="menu-toggle" aria-label="Abrir menú" id="menuToggle">☰</button>
-      <ul id="navList">
-        <li><a href="../pages/productos.html">Productos</a></li>
-        <li><a href="../pages/distribuidora-caba.html">Distribuidora CABA</a></li>
-        <li><a href="../pages/faq.html">Preguntas frecuentes</a></li>
-        <li><a href="../pages/como-comprar.html">Cómo comprar</a></li>
-        <li><a href="../pages/quienes-somos.html">Quiénes somos</a></li>
-        <li><a href="../pages/contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </div>
+<div class="container">
+<a class="brand" href="../index.html">
+<img alt="Barretodo logo" class="logo" loading="lazy" src="../assets/img/logo.png"/>
+<span class="brand-name">BARRETODO</span>
+</a>
+<nav aria-label="Principal" class="site-nav">
+<button aria-label="Abrir menú" class="menu-toggle" id="menuToggle">☰</button>
+<ul id="navList">
+<li><a href="../pages/productos.html">Productos</a></li>
+<li><a href="../pages/distribuidora-caba.html">Distribuidora CABA</a></li>
+<li><a href="../pages/faq.html">Preguntas frecuentes</a></li>
+<li><a href="../pages/como-comprar.html">Cómo comprar</a></li>
+<li><a href="../pages/quienes-somos.html">Quiénes somos</a></li>
+<li><a href="../pages/contacto.html">Contacto</a></li>
+</ul>
+</nav>
+</div>
 </header>
 <main class="page">
- <section class="container faq">
-  <h2 class="section-title">Preguntas frecuentes</h2>
-    
-    <!-- Usa la misma grilla y tarjetas del resto del sitio -->
-    <div class="grid simple-cards">
-      <article class="card">
-        <h3>¿Qué zonas cubren?</h3>
-        <p>CABA y GBA Norte en entregas programadas.</p>
-      </article>
-
-      <article class="card">
-        <h3>¿Cuáles son los medios de pago?</h3>
-        <p>Efectivo, transferencia y tarjetas. Consultá promos.</p>
-      </article>
-
-      <article class="card">
-        <h3>¿Tiempos de entrega?</h3>
-        <p>24–48 hs según zona y disponibilidad.</p>
-      </article>
-
-      <article class="card">
-        <h3>¿Venden por mayor?</h3>
-        <p>Sí, precios mayoristas reales con descuentos por volumen.</p>
-      </article>
-
-      <article class="card">
-        <h3>¿Puedo retirar?</h3>
-        <p>Coordinamos retiro en Almagro.</p>
-      </article>
-
-      <article class="card">
-        <h3>¿Asesoramiento?</h3>
-        <p>Te ayudamos por WhatsApp a elegir lo más rendidor.</p>
-      </article>
-    </div>
-
-       <!-- Cierre CTA -->
-  <section class="about-cta cta-band">
-    <div class="container cta-band-inner">
-      <h2>¿Querés simplificar tus compras de limpieza?</h2>
-      <div class="cta-row">
-        <a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
-        <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener">Escribinos por WhatsApp</a>
-      </div>
-    </div>
-  </section>
-  </section>
+<section class="container faq">
+<h2 class="section-title">Preguntas frecuentes</h2>
+<!-- Usa la misma grilla y tarjetas del resto del sitio -->
+<div class="grid simple-cards">
+<article class="card">
+<h3>¿Qué zonas cubren?</h3>
+<p>CABA y GBA Norte en entregas programadas.</p>
+</article>
+<article class="card">
+<h3>¿Cuáles son los medios de pago?</h3>
+<p>Efectivo, transferencia y tarjetas. Consultá promos.</p>
+</article>
+<article class="card">
+<h3>¿Tiempos de entrega?</h3>
+<p>24–48 hs según zona y disponibilidad.</p>
+</article>
+<article class="card">
+<h3>¿Venden por mayor?</h3>
+<p>Sí, precios mayoristas reales con descuentos por volumen.</p>
+</article>
+<article class="card">
+<h3>¿Puedo retirar?</h3>
+<p>Coordinamos retiro en Almagro.</p>
+</article>
+<article class="card">
+<h3>¿Asesoramiento?</h3>
+<p>Te ayudamos por WhatsApp a elegir lo más rendidor.</p>
+</article>
+</div>
+<!-- Cierre CTA -->
+<section class="about-cta cta-band">
+<div class="container cta-band-inner">
+<h2>¿Querés simplificar tus compras de limpieza?</h2>
+<div class="cta-row">
+<a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" rel="noopener" target="_blank">Escribinos por WhatsApp</a>
+</div>
+</div>
+</section>
+</section>
 </main>
-
 <footer class="site-footer">
-  <div class="container">
-
-    <div class="footer-main">
-      <!-- Col 1: Marca + descripción -->
+<div class="container">
+<div class="footer-main">
+<!-- Col 1: Marca + descripción -->
 <div class="footer-brand">
-  <img src="../assets/img/logo.png" alt="Barretodo">
-  <p>
+<img alt="Barretodo" loading="lazy" src="../assets/img/logo.png"/>
+<p>
     Distribuidora mayorista y minorista de productos de limpieza en CABA.
     Te ayudamos a elegir lo más rendidor.
   </p>
 </div>
-
-
-      <span class="f-divider" aria-hidden="true"></span>
-
-      <!-- Col 2: Datos de contacto -->
-      <div class="f-col f-contact">
-        <h3 class="f-title">Contacto</h3>
-        <ul class="f-list">
-          <li>📍 Av. Hipólito Yrigoyen 3386, Almagro, CABA</li>
-          <li>📞 +54 11 5102-2954</li>
-          <li>✉️ contacto@barretodo.com.ar</li>
-        </ul>
-      </div>
-
-      <span class="f-divider" aria-hidden="true"></span>
-
-      <!-- Col 3: Redes + Newsletter en un solo bloque -->
-      <div class="f-col f-social-news">
-        <h3 class="f-title">Seguinos</h3>
-        <div class="f-social-row">
-          <!-- Instagram -->
-          <a class="f-icon" href="https://instagram.com/" target="_blank" aria-label="Instagram">
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="#1F2D2C" stroke-width="1.8"><rect x="2.5" y="2.5" width="19" height="19" rx="5" ry="5"/><circle cx="12" cy="12" r="4.2"/><circle cx="18" cy="6" r="1.3" fill="#1F2D2C" stroke="none"/></svg>
-          </a>
-          <!-- WhatsApp -->
-          <a class="f-icon" href="https://wa.me/541151022954" target="_blank" aria-label="WhatsApp">
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="#1F2D2C" stroke-width="1.8"><path d="M20.5 11.8A8.5 8.5 0 0 1 8.3 19.6L4 21l1.3-4.1A8.5 8.5 0 1 1 20.5 11.8z"/><path d="M16.4 14.6c-.2.6-1.2 1-1.7.9-1.4-.3-3.2-1.2-4.3-2.6-1.2-1.4-1.7-2.9-1.9-3.8-.1-.6.3-1.5.9-1.7.3-.1.6 0 .8.3l.9 1.2c.2.3.2.7 0 1-.2.2-.2.4 0 .7.3.6.9 1.4 1.6 2 .6.6 1.3 1.1 1.9 1.4.3.1.5.1.7 0 .3-.2.7-.2 1 .1l1 .8c.3.3.4.6.1.9z" fill="#1F2D2C" stroke="none"/></svg>
-          </a>
-          <!-- Facebook -->
-          <a class="f-icon" href="https://facebook.com/" target="_blank" aria-label="Facebook">
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="#1F2D2C" stroke-width="1.8"><path d="M14.5 8.5h2.5V6h-2.5c-2 0-3.5 1.5-3.5 3.5V12H8v2.5h3v6h2.5v-6H17V12h-3v-2c0-.6.4-1.5 1.5-1.5z"/></svg>
-          </a>
-        </div>
-
-        <h3 class="f-title f-title-space">Suscribite</h3>
-        <form class="f-news-form" action="#" method="post">
-          <input type="email" class="f-input" placeholder="Tu email">
-          <button class="f-submit" type="submit">Suscribirme</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Barra inferior -->
-    <div class="footer-bottom">
-      <nav class="f-links">
-        <a href="/productos.html">Productos</a>
-        <a href="/catalogo.html">Catálogo</a>
-        <a href="/contacto.html">Contacto</a>
-      </nav>
-      <div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
-    </div>
-  </div>
-</footer>
-
-
-<a class="whatsapp-fab" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener" aria-label="Comunicate con nosotros">
-  <img src="../assets/img/whatsapp.png" alt="WhatsApp">
-  <span>Comunicate con nosotros</span>
+<span aria-hidden="true" class="f-divider"></span>
+<!-- Col 2: Datos de contacto -->
+<div class="f-col f-contact">
+<h3 class="f-title">Contacto</h3>
+<ul class="f-list">
+<li>📍 Av. Hipólito Yrigoyen 3386, Almagro, CABA</li>
+<li>📞 +54 11 5102-2954</li>
+<li>✉️ contacto@barretodo.com.ar</li>
+</ul>
+</div>
+<span aria-hidden="true" class="f-divider"></span>
+<!-- Col 3: Redes + Newsletter en un solo bloque -->
+<div class="f-col f-social-news">
+<h3 class="f-title">Seguinos</h3>
+<div class="f-social-row">
+<!-- Instagram -->
+<a aria-label="Instagram" class="f-icon" href="https://instagram.com/" target="_blank">
+<svg fill="none" height="20" stroke="#1F2D2C" stroke-width="1.8" viewbox="0 0 24 24" width="20"><rect height="19" rx="5" ry="5" width="19" x="2.5" y="2.5"></rect><circle cx="12" cy="12" r="4.2"></circle><circle cx="18" cy="6" fill="#1F2D2C" r="1.3" stroke="none"></circle></svg>
 </a>
-
+<!-- WhatsApp -->
+<a aria-label="WhatsApp" class="f-icon" href="https://wa.me/541151022954" target="_blank">
+<svg fill="none" height="20" stroke="#1F2D2C" stroke-width="1.8" viewbox="0 0 24 24" width="20"><path d="M20.5 11.8A8.5 8.5 0 0 1 8.3 19.6L4 21l1.3-4.1A8.5 8.5 0 1 1 20.5 11.8z"></path><path d="M16.4 14.6c-.2.6-1.2 1-1.7.9-1.4-.3-3.2-1.2-4.3-2.6-1.2-1.4-1.7-2.9-1.9-3.8-.1-.6.3-1.5.9-1.7.3-.1.6 0 .8.3l.9 1.2c.2.3.2.7 0 1-.2.2-.2.4 0 .7.3.6.9 1.4 1.6 2 .6.6 1.3 1.1 1.9 1.4.3.1.5.1.7 0 .3-.2.7-.2 1 .1l1 .8c.3.3.4.6.1.9z" fill="#1F2D2C" stroke="none"></path></svg>
+</a>
+<!-- Facebook -->
+<a aria-label="Facebook" class="f-icon" href="https://facebook.com/" target="_blank">
+<svg fill="none" height="20" stroke="#1F2D2C" stroke-width="1.8" viewbox="0 0 24 24" width="20"><path d="M14.5 8.5h2.5V6h-2.5c-2 0-3.5 1.5-3.5 3.5V12H8v2.5h3v6h2.5v-6H17V12h-3v-2c0-.6.4-1.5 1.5-1.5z"></path></svg>
+</a>
+</div>
+<h3 class="f-title f-title-space">Suscribite</h3>
+<form action="#" class="f-news-form" method="post">
+<input class="f-input" placeholder="Tu email" type="email"/>
+<button class="f-submit" type="submit">Suscribirme</button>
+</form>
+</div>
+</div>
+<!-- Barra inferior -->
+<div class="footer-bottom">
+<nav class="f-links">
+<a href="/productos.html">Productos</a>
+<a href="/catalogo.html">Catálogo</a>
+<a href="/contacto.html">Contacto</a>
+</nav>
+<div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
+</div>
+</div>
+</footer>
+<a aria-label="Comunicate con nosotros" class="whatsapp-fab" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" rel="noopener" target="_blank">
+<img alt="WhatsApp" loading="lazy" src="../assets/img/whatsapp.png"/>
+<span>Comunicate con nosotros</span>
+</a>
 <script src="../assets/js/app.js"></script>
 </body>
 </html>
