--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -280,7 +280,23 @@ async function cargarCatalogo() {
    actualizarTotales(); // Ejecutar una vez para iniciar los totales correctamente
 }
 window.addEventListener('DOMContentLoaded', cargarCatalogo);
-</script></body>
+</script>
+
+<!-- Barra de resumen fija -->
+<div class="sticky-cart" id="stickyCart" style="display:none">
+  <div class="sc-left">
+    <strong id="sc-count">0</strong> productos · <span id="sc-total">$0</span>
+    <span class="sc-note">Envíos 24–48 h · Todos los medios de pago</span>
+  </div>
+  <div class="sc-right">
+    <button class="btn btn-secondary" id="btnViewCart" type="button">VER CARRITO</button>
+    <button class="btn btn-primary" id="btnCheckout" type="button">COTIZAR</button>
+    <a class="btn btn-whatsapp" id="btnWA" target="_blank" rel="noopener">WHATSAPP</a>
+  </div>
+</div>
+
+
+</body>
 </html>
 <!-- Modal para completar datos del cliente -->
 <div id="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:#00000088; z-index:1000;">
